--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <activity android:name=".MapActivity" android:exported="false">
 
         </activity>
+        <activity android:name=".GameActivity" android:exported="false">
+
+        </activity>
+
     </application>
 
 </manifest>
